--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -8,10 +8,68 @@ body {
     background-color: #112240;
     color: var(--col-white);
 }
+.bg-img {
+    position: relative; 
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bg-img::before {    
+      content: "";
+      background-image: url('../../public/background.jpg');
+      background-size: cover;
+      position: absolute;
+      top: 0px;
+      right: 0px;
+      bottom: 0px;
+      left: 0px;
+      opacity: 0.2;
+}
+
+h1, h2, button {
+    position: relative;
+    color: #ffffff;  
+    /* font-size: 14rem; */
+    line-height: 0.9;
+    text-align: center;
+  }
+
+  /* CSS-tricks.com typewriter effect */
+.typewriter h1 {
+    color: var(--col-slate);
+    font-family: monospace;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    /* letter-spacing: .15em; Adjust as needed */
+    animation: 
+      typing 3.5s steps(30, end);
+}
+
+.typewriter h2 {
+    color: var(--col-slate);
+    font-family: monospace;
+    display: none;
+}
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: var(--col-green) }
+}
 
 .middle {
     min-height: 100vh;
 }
+
 .greeting {
     color: var(--col-green);
 }
