--- a/src/styles/Body.css
+++ b/src/styles/Body.css
@@ -1,26 +1,7 @@
-:root {
-    --col-slate: #a8b2d1;
-    --col-white: #e6f1ff;
-    --col-green: rgb(0, 215, 0);
-}
-
-body {
-    background-color: #112240;
-    color: var(--col-white);
-}
-
 .middle {
     min-height: 100vh;
-}:root {
-    --col-slate: #a8b2d1;
-    --col-white: #e6f1ff;
-    --col-green: rgb(0, 215, 0);
 }
 
-body {
-    background-color: #112240;
-    color: var(--col-white);
-}
 .bg-img {
     position: relative; 
     height: 100vh;
@@ -32,7 +13,7 @@ body {
 
 .bg-img::before {    
       content: "";
-      background-image: url('../../public/background.jpg');
+      background-image: url('../../public/img/background.jpg');
       background-size: cover;
       position: absolute;
       top: 0px;
@@ -81,6 +62,45 @@ h1, h2 {
 .greeting {
     color: var(--col-green);
 }
-.greeting {
-    color: var(--col-green);
-}
+
+/* CSS - downloaded from getcssscan.com */
+.btn-custom {
+    opacity: 0;
+    font-size: 18px;
+    color: var(--col-slate);
+    font-family: inherit;
+    font-weight: 800;
+    cursor: pointer;
+    position: relative;
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition-duration: 400ms;
+    transition-property: color;
+  }
+  
+  .btn-custom:focus,
+  .btn-custom:hover {
+    color: #fff;
+  }
+  
+  .btn-custom:focus:after,
+  .btn-custom:hover:after {
+    width: 100%;
+    left: 0%;
+  }
+  
+  .btn-custom:after {
+    content: "";
+    pointer-events: none;
+    bottom: -2px;
+    left: 50%;
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    background-color: var(--col-green);
+    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition-duration: 400ms;
+    transition-property: width, left;
+  }
