portfolio page to render cards with projects saved in the file, with img, titile, description, url to deployed app and github repository

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,3 +9,19 @@ body {
     background-color: var(--bg-color);
     color: var(--col-white);
 }
+
+.custom-card {
+    margin: 20px;
+    /* height: 75vh; */
+    max-width: 50vh;
+    background-color: var(--bg-color);
+    color: var(--col-slate);
+}
+
+.header-portfolio {
+    margin: 20px;
+}
+
+.portfolio-icons a {
+    margin: 0 15px;
+}
