--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,10 +12,25 @@ body {
 
 .custom-card {
     margin: 20px;
-    /* height: 75vh; */
     max-width: 50vh;
     background-color: var(--bg-color);
     color: var(--col-slate);
+    position: relative;
+    transition: all .5s ease-in-out;
+}
+
+.custom-card:hover {
+    transform: translateY(-10px);
+}
+
+.card-img {
+    max-width: 100%;
+    height: 250;
+    width: auto\9; /* ie8 */
+
+    @media (height: 976px) {
+        height: auto;
+    }
 }
 
 .header-portfolio {
