--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,4 +1,5 @@
 .contact-col {
+  margin-bottom: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -6,4 +7,8 @@
 
 .contact-col a:hover .icon {
     color: var(--col-green) !important;
+}
+
+.form-control {
+  margin-top: 1rem;
 }
