--- a/src/components/Body/style.css
+++ b/src/components/Body/style.css
@@ -1,3 +1,46 @@
+:root {
+  --col-slate: #a8b2d1;
+  --col-white: #e6f1ff;
+  --col-green: rgb(0, 215, 0);
+  --bg-color: #112240;
+}
+
+body {
+  background-color: var(--bg-color);
+  color: var(--col-white);
+}
+
+.custom-card {
+  margin: 20px;
+  max-width: 50vh;
+  background-color: var(--bg-color);
+  color: var(--col-slate);
+  position: relative;
+  transition: all .5s ease-in-out;
+}
+
+.custom-card:hover {
+  transform: translateY(-10px);
+}
+
+.card-img {
+  max-width: 100%;
+  height: 250;
+  width: auto\9; /* ie8 */
+
+  @media (height: 976px) {
+      height: auto;
+  }
+}
+
+.header-portfolio {
+  margin: 20px;
+}
+
+/* .portfolio-icons a {
+  margin: 0 15px;
+} */
+
 .middle {
     min-height: 100vh;
 }
@@ -13,7 +56,7 @@
 
 .bg-img::before {    
       content: "";
-      background-image: url('../../public/img/background.jpg');
+      background-image: url('/public/img/background.jpg');
       background-size: cover;
       position: absolute;
       top: 0px;
