img folder from public moved to /assets/img/, global class 'about-style' changed to 'custom-'container'

--- a/src/pages/About/style.css
+++ b/src/pages/About/style.css
@@ -1,4 +1,4 @@
-.about-style {
+.custom-container {
     background-color: var(--bg-color);
     position: relative;
     color: var(--col-slate);  
