--- a/src/components/Body/style.css
+++ b/src/components/Body/style.css
@@ -56,7 +56,7 @@ body {
 
 .bg-img::before {    
       content: "";
-      background-image: url('/public/img/background.jpg');
+      background-image: url('/public/assets/img/background.jpg');
       background-size: cover;
       position: absolute;
       top: 0px;
